trunk/timeware/src/objects/Summary__c.object
<CustomObject>
    <description>Master-Detail relationship with Employee (Master) object.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doubletime_Hours__c</fullName>
        <label>Doubletime Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earnings_Dollars__c</fullName>
        <label>Earnings Dollars</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>R00N70000002IOYIEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overtime_Hours__c</fullName>
        <label>Overtime Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Ending_Date__c</fullName>
        <label>Pay Period Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regular_Hours__c</fullName>
        <label>Regular Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Week number for the pay week. Week number for a weekly pay period is always 1, bi-weekly is 1 or 2, etc. Default is 1.</description>
        <label>Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekend_Hours__c</fullName>
        <label>Weekend Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SU-{00000000}</displayFormat>
        <label>Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>